@@ -24,26 +24,30 @@ function clear() {
 
 function record_pass() {
     check();
-    ++ passed;
+    RESULTS[key] = "p";
     clear();
 }
 
 function record_skip() {
     check();
-    ++ skipped;
+    RESULTS[key] = "s";
     clear();
 }
 
+# The output cares only if the test passes at least once so if a test passes,
+# but then fails in a re-run triggered by a different test, ignore it.
 function record_fail() {
     check();
-    ++ failed;
-    fail[failidx++] = sprintf ("%s/%s", curdir, curfile);
+    if (!(key in RESULTS)){
+        RESULTS[key] = "f";
+    }
     clear();
 }
 
 function record_unexp() {
-    ++ unexped;
-    unexp[unexpidx++] = sprintf ("%s/%s", curdir, curfile);
+    if (!(key in RESULTS)){
+        RESULTS[key] = "e";
+    }
     clear();
 }
 
@@ -51,6 +55,8 @@ function record_unexp() {
     if (in_test) record_unexp();
     match($0, /Running tests from '[^']*'/);
     curdir = substr($0, RSTART+20, RLENGTH - 21);
+    key = curdir;
+    DIRS[key] = key;
     curfile = "";
 }
 
@@ -63,11 +69,15 @@ function record_unexp() {
     if (in_test) record_unexp();
     match($0, /... testing '[^']*'/);
     curfile = substr($0, RSTART+13, RLENGTH-14);
+    key = sprintf ("%s/%s", curdir, curfile);
+    DIRS[key] = curdir;
     in_test = 1;
 }
 
 /^ ... testing with / {
     if (in_test) record_unexp();
+    key = curdir;
+    DIRS[key] = curdir;
     in_test = 1;
 }
 
@@ -87,6 +97,16 @@ function record_unexp() {
     record_unexp();
 }
 
+/^re-ran / {
+    if (in_test){
+        printf("error at line %d: found re-ran inside a test\n", NR);
+        errored = 1;
+    }else{
+        RERAN[substr($0, 8, length($0)-7)] += 1;
+        ++ reran;
+    }
+}
+
 # Not displaying "skipped" for the moment, as most of the skipped tests
 # print nothing at all and are not counted.
 
@@ -95,23 +115,55 @@ END {
         printf ("\n#### Some fatal error occurred during testing.\n\n");
         exit (3);
     }else{
-        printf("\n");
-        printf("Summary:\n");
-        printf("  %3d test(s) passed\n", passed);
-        printf("  %3d test(s) failed\n", failed);
-        printf("  %3d unexpected error(s)\n", unexped);
-        if (failed != 0){
-            printf("\nList of failed tests:\n");
-            for (i=0; i < failed; i++) printf("    %s\n", fail[i]);
-        }
-        if (unexped != 0){
-            printf("\nList of unexpected errors:\n");
-            for (i=0; i < unexped; i++) printf("    %s\n", unexp[i]);
-        }
-        printf("\n");
-        if (failed || unexped){
-            printf("#### Some tests failed. Exiting with error status.\n\n");
-            exit 4;
+        if (!retries){
+            for (key in RESULTS){
+                switch (RESULTS[key]) {
+                case "p":
+                    ++ passed;
+                    break
+                case "f":
+                    ++ failed;
+                    fail[failidx++] = key;
+                    break
+                case "e":
+                    ++ unexped;
+                    unexp[unexpidx++] = key;
+                    break
+                }
+            }
+            printf("\n");
+            printf("Summary:\n");
+            printf("  %3d test(s) passed\n", passed);
+            printf("  %3d test(s) failed\n", failed);
+            printf("  %3d unexpected error(s)\n", unexped);
+            if (reran != 0){
+                printf("  %3d test dir re-run(s)\n", reran);
+            }
+            if (failed != 0){
+                printf("\nList of failed tests:\n");
+                for (i=0; i < failed; i++) printf("    %s\n", fail[i]);
+            }
+            if (unexped != 0){
+                printf("\nList of unexpected errors:\n");
+                for (i=0; i < unexped; i++) printf("    %s\n", unexp[i]);
+            }
+            printf("\n");
+            if (failed || unexped){
+                printf("#### Some tests failed. Exiting with error status.\n\n");
+                exit 4;
+            }
+        }else{
+            for (key in RESULTS){
+                if (RESULTS[key] == "f" || RESULTS[key] == "e"){
+                    key = DIRS[key];
+                    if (!(key in RERUNS)){
+                        RERUNS[key] = 1;
+                        if (RERAN[key] < max_retries){
+                            printf("%s\n", key);
+                        }
+                    }
+                }
+            }
         }
     }
 }
